@@ -5,6 +5,8 @@ CHANGELOG
 ClanSphere 2010.0 >> xxxx-xx-xx
 ___________________________________________________________
 
+-- Recommended PHP version changed to 5.3.2
+
 -> Added a medals list (duriel)
 -> Added mail-function to subscription (spongebob)
 -> Added board/navtop2 (spongebob)
@@ -35,6 +37,7 @@ ___________________________________________________________
 -> Changed: user now changeable in cash/edit (spongebob)
 -> Changed: runstartup directory has turned into a mod based info.php setting (hajo)
 -> Changed: the htaccess_example does now contain a charset example (hajo)
+-> Removed sqlite v2 database support due to a lack of needed features (hajo)
 -> Reworked users/nextbirth and users/navbirth (spongebob)
 -> Reworked board/sort (spongebob)
 -> Reworked board/stats (spongebob)
